updated redux reducers, mapped projects.

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	border-color: #ec407a;
 	box-shadow: none;
 }
+
+#notifcations {
+	color: white;
+}
