--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,9 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background: url('/img/Night_Stars.jpg') no-repeat;
-	background-size: 100%;
-	background-position: top;
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
 	background-color: black;
 	min-height: 100%;
 }
